--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.13",
+    "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-stately": "^3.30.1"
   },
   "devDependencies": {
     "@types/node": "^20",
